force-app/main/default/objects/Custom_Content__c/Custom_Content__c.object-meta.xml
<CustomObject>
    <label>Custom Content</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>