force-app/main/default/objects/Custom_Content__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>