force-app/main/default/objects/Custom_Content__c/fields/Content_Number__c.field-meta.xml
<CustomField>
    <fullName>Content_Number__c</fullName>
    <label>Content Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>