force-app/main/default/objects/Custom_Content__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>